samples/_failures_safe/1761259274_a342e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5fb8647f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_5fb8647f.c:164:13: error: expected declaration or statement at end of input
  164 |             pos++;
      |             ^~~
./samples/SAFE/__tmp_5fb8647f.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5fb8647f.c:164:13: error: expected declaration or statement at end of input
